--- a/Destine/Destine.csproj
+++ b/Destine/Destine.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Nito.AsyncEx.Core" Version="1.0.0-rc2-001" />
+  </ItemGroup>
+
 </Project>
