--- a/Destine/Destine.csproj
+++ b/Destine/Destine.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nito.AsyncEx.Core" Version="1.0.0-rc2-001" />
+    <PackageReference Include="Nito.AsyncEx" Version="5.0.0-pre-05" />
   </ItemGroup>
 
 </Project>
